Update mapping to Elasticsearch 5.0

--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -210,27 +210,25 @@ secret = 'password'
 
 # Properties of the document type used for storage.
 mapping = {
-    'url': {'type': 'string', 'index': 'not_analyzed'},
-    'source_domain': {'type': 'string', 'index': 'not_analyzed'},
-    'title_page': {'type': 'string'},
-    'title_rss': {'type': 'string'},
-    'localpath': {'type': 'string', 'index' : 'not_analyzed'},
-    'filename': {'type': 'string', 'index' : 'not_analyzed'},
-    'ancestor': {'type': 'string'},
-    'descendant': {'type': 'string'},
+    'url': {'type': 'keyword'},
+    'source_domain': {'type': 'keyword'},
+    'title_page': {'type': 'text'},
+    'title_rss': {'type': 'text'},
+    'localpath': {'type': 'keyword'},
+    'filename': {'type': 'keyword'},
+    'ancestor': {'type': 'text'},
+    'descendant': {'type': 'text'},
     'version': {'type': 'long'},
-    'date_download': {'type': 'date', "format":"yyyy-MM-dd HH:mm:ss"},
-    'date_modify': {'type': 'date', "format":"yyyy-MM-dd HH:mm:ss"},
-    'date_publish': {'type': 'date', "format":"yyyy-MM-dd HH:mm:ss"},
-    'title': {'type': 'string'},
-    'description': {'type': 'string'},
-    'text': {'type': 'string'},
-    'authors': {'type': 'string'},
-    'image_url': {'type': 'string', 'index' : 'not_analyzed'},
-    'language': {'type': 'string', 'index' : 'not_analyzed'},
+    'date_download': {'type': 'date', 'format':"yyyy-MM-dd HH:mm:ss"},
+    'date_modify': {'type': 'date', 'format':"yyyy-MM-dd HH:mm:ss"},
+    'date_publish': {'type': 'date', 'format':"yyyy-MM-dd HH:mm:ss"},
+    'title': {'type': 'text'},
+    'description': {'type': 'text'},
+    'text': {'type': 'text'},
+    'authors': {'type': 'text'},
+    'image_url': {'type': 'keyword'},
+    'language': {'type': 'keyword'}
     }
-
-
 
 [ArticleMasterExtractor]
 
