adds sanitize feature

--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -131,7 +131,7 @@ relative_to_start_processes_file = True
 
 # Here you can specify the input JSON-Filename
 # default: sitelist.hjson
-url_input_file_name = sitelist.hjson
+url_input_file_name = sitelist-en.hjson
 
 
 
