adds enqueue new documents to rabbitmq functionality

--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -179,6 +179,13 @@ local_data_directory = %working_path/data/%time_execution(%Y)/%time_execution(%m
 format_relative_path = True
 
 
+[RabbitMQ]
+
+# RabbitMQ connection, required for dispatching new found articles
+host = localhost
+port = 5672
+queue_name = 'news_please_queue'
+
 
 [MySQL]
 
@@ -314,5 +321,5 @@ USER_AGENT = 'news-please (+http://www.example.com/)'
 # Further options: 'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
 ITEM_PIPELINES = {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100,
                   'newsplease.pipeline.pipelines.HtmlFileStorage':200,
-                  'newsplease.pipeline.pipelines.JsonFileStorage':300
+                  'newsplease.pipeline.pipelines.JsonFileStorage':300,
                   }
