--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -40,7 +40,7 @@ fallbacks = {
 # Determines how many hours need to pass since the last download of a webpage
 # to be downloaded again by the RssCrawler
 # default: 6
-hours_to_pass_for_redownload_by_rss_crawler = 6
+hours_to_pass_for_redownload_by_rss_crawler = 1
 
 
 
@@ -54,7 +54,7 @@ number_of_parallel_crawlers = 5
 
 # Number of daemons, will be added to daemons.
 # default: 10
-number_of_parallel_daemons = 10
+number_of_parallel_daemons = 20
 
 
 
@@ -131,7 +131,7 @@ relative_to_start_processes_file = True
 
 # Here you can specify the input JSON-Filename
 # default: sitelist.hjson
-url_input_file_name = sitelist-en.hjson
+url_input_file_name = sitelist-en-or.hjson
 
 
 
@@ -182,8 +182,8 @@ format_relative_path = True
 [RabbitMQ]
 
 # RabbitMQ connection, required for dispatching new found articles
-host = localhost
-port = 5672
+host = 127.0.0.1
+port = 15672
 queue_name = 'news_please_queue'
 
 
@@ -201,8 +201,8 @@ password = 'password'
 [Elasticsearch]
 
 # Elasticsearch-Connection required for saving detailed meta-information
-host = localhost
-port = 9200
+host = 127.0.0.1
+port = 19200
 index_current = 'news-please'
 index_archive = 'news-please-archive'
 
@@ -309,7 +309,7 @@ CONCURRENT_REQUESTS=16
 
 # Maximum number of active requests per domain
 # default: 4
-CONCURRENT_REQUESTS_PER_DOMAIN=4
+CONCURRENT_REQUESTS_PER_DOMAIN=10
 
 # User-agent activation
 # default: 'news-please (+http://www.example.com/)'
@@ -320,7 +320,8 @@ USER_AGENT = 'news-please (+http://www.example.com/)'
 # default: {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100, 'newsplease.crawler.pipeline.HtmlFileStorage':200, 'newsplease.pipeline.pipelines.JsonFileStorage': 300}
 # Further options: 'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
 ITEM_PIPELINES = {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100,
-                  'newsplease.pipeline.pipelines.HtmlFileStorage':200,
-                  'newsplease.pipeline.pipelines.JsonFileStorage':300,
-                  'newsplease.pipeline.pipelines.ElasticsearchRabbitMQStorage':350,
+                  # 'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
+                  # 'newsplease.pipeline.pipelines.HtmlFileStorage':200,
+                  # 'newsplease.pipeline.pipelines.JsonFileStorage':300,
+		          'newsplease.pipeline.pipelines.ElasticsearchRabbitMQStorage': 350,
                   }
