new scrapy confs and some logging stuff

--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -54,7 +54,7 @@ number_of_parallel_crawlers = 5
 
 # Number of daemons, will be added to daemons.
 # default: 10
-number_of_parallel_daemons = 20
+number_of_parallel_daemons = 16
 
 
 
@@ -293,6 +293,10 @@ BOT_NAME = 'news-please'
 
 SPIDER_MODULES = ['newsplease.crawler.spiders']
 NEWSPIDER_MODULE = 'newsplease.crawler.spiders'
+# do not retry, if is down will be down also after 30 sec
+RETRY_ENABLED = False
+# scrapy timeout, believe me, if a server doesn not answer in 30 seconds it won't answer
+DOWNLOAD_TIMEOUT=30
 
 # Resume/Pause functionality activation
 # default: .resume_jobdir
