--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -76,6 +76,8 @@ ignore_regex = ""
 # default: True
 sitemap_allow_subdomains = True
 
+# number of seconds that must intercurr between a rescan of all sources when using the flas -use_redis_sources
+redis_sources_loop_interval = 300
 
 
 [Heuristics]
