adds redis confs

--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -78,6 +78,13 @@ sitemap_allow_subdomains = True
 
 # number of seconds that must intercurr between a rescan of all sources when using the flas -use_redis_sources
 redis_sources_loop_interval = 300
+redis_host = 'localhost'
+redis_port = 6379
+redis_db_index = 0
+redis_sentinel_host = None
+redis_sentinel_port = 26379
+redis_sentinel_master = 'mymaster'
+
 
 
 [Heuristics]
