--- a/newsplease/config/config.cfg
+++ b/newsplease/config/config.cfg
@@ -54,7 +54,7 @@ number_of_parallel_crawlers = 5
 
 # Number of daemons, will be added to daemons.
 # default: 10
-number_of_parallel_daemons = 16
+number_of_parallel_daemons = 20
 
 
 
@@ -76,7 +76,7 @@ ignore_regex = ""
 # default: True
 sitemap_allow_subdomains = True
 
-# number of seconds that must intercurr between a rescan of all sources when using the flas -use_redis_sources
+# number of seconds that must intercurr between a rescan of all sources when using the flag -use-redis-sources
 redis_sources_loop_interval = 300
 redis_host = 'localhost'
 redis_port = 6379
